# just-prs-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fastmcp.json  justfile  pyproject.toml  smithery.yaml
.claude/skills/prs-trait-interpretation/: SKILL.md
docs/: competitor-research.md  dogfooding.md  just-prs-pending-fixes.md  previous_issues.md
src/just_prs_mcp/: __init__.py  agent.py  client.py  logging_setup.py  models.py  server.py  settings.py
src/just_prs_mcp/tools/: __init__.py  catalog.py  compute.py  extended.py  reference.py
src/mcp_template/: __init__.py  auth.py  logging_setup.py  models.py  server.py  settings.py
src/mcp_template/tools/: __init__.py  bakery_cloud.py  data.py  extended.py  recipes.py
tests/: conftest.py  test_agent.py  test_auth.py  test_bake_task.py  test_compare_genomes.py  test_dogfooding_fixes.py  test_errors.py  test_essentials.py  test_list_genomes.py  test_modes.py  test_stateless.py
