[project]
name = "just-prs-mcp"
version = "0.1.2"
description = "An MCP server wrapping just-prs — PGS Catalog search and polygenic risk score computation"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["mcp", "fastmcp", "prs", "pgs-catalog", "polygenic-risk-score", "genomics"]

dependencies = [
    # `tasks` extra enables real MCP background tasks (@mcp.tool(task=True)).
    # Default backend is in-memory (memory://) — zero config, no Redis needed.
    # Set FASTMCP_DOCKET_URL=redis://... only for distributed/persistent tasks.
    "fastmcp[tasks]>=3.4.2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "typer>=0.16",
    "anyio>=4",
    "just-prs==0.4.12",
]

[project.optional-dependencies]
# Optional cloud deployment glue. `uv sync --extra smithery` to enable.
smithery = ["smithery>=0.4.2"]
# Reference-panel / pgen scoring tools need the native pgenlib (no Windows
# wheels — Linux/WSL only). `uv sync --extra reference` to enable those tools.
reference = ["pgenlib; sys_platform != 'win32'"]

[project.scripts]
# Primary entrypoint. Subcommands: main | stdio | http | sse  (run `just-prs-mcp --help`).
just-prs-mcp = "just_prs_mcp.server:cli_app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.smithery]
# Optional: Smithery cloud deployment. Function returns a fresh FastMCP server.
server = "just_prs_mcp.server:start_mcp_smithery"
log_level = "warning"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "agno>=2.6.11",
    "openai>=2.41.0",
    "google-genai>=2.8.0,<2.9.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: agentic tests that call an LLM API (require API key)",
    "slow: tests that take minutes (genome download/normalization/scoring)",
    "network: tests that require live network access (PGS Catalog, Zenodo)",
]
filterwarnings = [
    # Benign deprecation emitted inside opentelemetry (a transitive dep of
    # fastmcp + pydocket), not our code. Remove once upstream updates.
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
